ConnexoProject/force-app/main/default/objects/Affected_Process__c/Affected_Process__c.object-meta.xml
<CustomObject>
    <label>Affected Process</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Affected Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affected Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>