ConnexoProject/force-app/main/default/objects/Affected_Process__c/fields/Affected_Process__c.field-meta.xml
<CustomField>
    <fullName>Affected_Process__c</fullName>
    <label>Affected Process</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>