ConnexoProject/force-app/main/default/objects/Affected_Process__c/fields/Process_ID__c.field-meta.xml
<CustomField>
    <fullName>Process_ID__c</fullName>
    <label>Process ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>