ConnexoProject/force-app/main/default/objects/Affected_Process__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Affected Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Material Control</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>To be added</fullName>
                <isActive>false</isActive>
                <label>To be added</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>