ConnexoProject/force-app/main/default/objects/Affected_Process__c/fields/Quality_Event__c.field-meta.xml
<CustomField>
    <fullName>Quality_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Event</label>
    <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
    <relationshipLabel>Affected Processes</relationshipLabel>
    <relationshipName>Affected_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>